--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <style>
     .news-content {
       width: 100%;
-      font-size: 14px !important;
+      font-size: 16px !important;
       background-color: #ffffff !important;
+      line-height: 24px;
+      text-align: justify;
+      margin: 0;
+      padding: 0;
     }
 
     .news-img {
