--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-  <title>安全服务云APP-政府端Demo</title>
+  <title>安全服务云APP-政府端</title>
   <link rel="stylesheet" type="text/css" href="/static/iconFonts/iconfont.css">
   <!-- <script type="text/javascript" src="/static/platform_android/cordova.js"></script>    -->
   <script type="text/javascript" src="/static/platform_www_browser/cordova.js"></script>
